2000-09-15  Fernando Nasser  <fnasser@cygnus.com>

	* ser-unix.c (do_unix_readchar): Prevent infinite read wait to be
	interrupted after 32K seconds.

2000-09-15  Kevin Buettner  <kevinb@redhat.com>

	* language.c (show_case_command, set_case_command): Protoize.
	* m3-nat.c (m3_xfer_memory, fetch_thread_info): Protoize.

2000-09-12  Kevin Buettner  <kevinb@redhat.com>

	* lin-thread.c (threadlist_iter, get_lwp_from_thread_id,
	thread_db_xfer_memory): Protoize.
	* linux-thread.c (iterate_active_threads): Protoize.

2000-09-12  Kevin Buettner  <kevinb@redhat.com>

	* objfiles.c (objfile_relocate): Don't assume that offsets
	associated with one of SECT_OFF_TEXT, SECT_OFF_DATA, or
	SECT_OFF_BSS will be adequate for relocating all of the
	sections in an objfile.

2000-09-12  Fernando Nasser  <fnasser@cygnus.com>

	* remote-rdi.c (arm_rdi_open): Fix typo in error message.

Wed Sep 13 03:08:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote-mips.c (mips_expect, mips_getstring, mips_send_packet,
 	mips_send_packet, pmon_insert_breakpoint, send_srec,
 	pmon_check_ack, pmon_check_entry_address,
 	_initialize_remote_mips): Replace the magic two seconds with
 	``remote_timeout''.
	(pmon_check_entry_address, pmon_check_total): New functions.  Use
 	``remote_timeout'' instead of magic two seconds.
	(pmon_end_download): Rewrite.  Use pmon_check_entry_address and
 	pmon_check_total.

2000-09-12  Alexandre Oliva  <aoliva@redhat.com>

	* MAINTAINERS: Added myself.

2000-09-11  Alexandre Oliva  <aoliva@redhat.com>

	* acinclude.m4 (CY_GNU_GETTEXT): Add dummy definition, so that the
	one brought in by ../bfd/acinclude.m4 prevails.
	* aclocal.m4, configure: Rebuilt.

2000-09-11  Kevin Buettner  <kevinb@redhat.com>

	* configure.in (HAVE_STRUCT_LINK_MAP32): Change test to use
	AC_TRY_COMPILE instead of AC_TRY_RUN.
	* configure: Regenerate.

2000-09-11  Kevin Buettner  <kevinb@redhat.com>

	* irix4-nat.c (fetch_core_registers): Protoize.